added liters per day

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <meta http-equiv="X-UA-Compatible" content="ie=edge">
          <title>title</title>
-         <script type="text/javascript" src="script.js"></script>
+         
       </head>
        <body>
            <div class="main">
-               <p>production and sales</p>
-            
+               <p id="header">PRODUCTION AND SALES</p>
+
           </div>
 
 
-
-        </body>
+          <script type="text/javascript" src="script.js"></script>
+        </body> 
     </html>    
 
